--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/titillium-web": "^5.0.18",
     "@fontsource/ubuntu": "^5.0.8",
     "astro": "^4.0.8",
+    "astro-icon": "^1.0.2",
     "normalize.css": "^8.0.1",
     "ramda": "^0.29.1",
     "sass": "^1.69.6",
