--- a/package.json
+++ b/package.json
@@ -11,20 +11,30 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/react": "^3.0.9",
     "@fontsource-variable/fira-code": "^5.0.16",
     "@fontsource-variable/manrope": "^5.0.18",
     "@fontsource/fira-mono": "^5.0.8",
     "@fontsource/fira-sans": "^5.0.18",
     "@fontsource/titillium-web": "^5.0.18",
     "@fontsource/ubuntu": "^5.0.8",
+    "@formspree/react": "^2.5.1",
+    "@radix-ui/themes": "^2.0.3",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.0.8",
     "astro-icon": "^1.0.2",
+    "formik": "^2.4.5",
     "normalize.css": "^8.0.1",
     "ramda": "^0.29.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.69.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@types/ramda": "^0.29.9"
+    "@types/ramda": "^0.29.9",
+    "@types/yup": "^0.32.0"
   }
 }
